Fixing footer overlap content bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,8 +93,7 @@ h1 {
 
 .footer {
     background: rgba();
-    bottom: 2px;
     color: #ccc;
-    position: fixed;
+    margin-top: 11%;
     width: 100%;
 }
